# android_prebuilts_build-tools

./: Android.bp  BUILD.bazel  build-prebuilts.sh  manifest.xml  update-prebuilts.sh
common/bison/: glr.c  lalr1.cc  yacc.c
darwin-x86/lib64/: libandroidicu-host.dylib  libbase.dylib  libbz.dylib  libc++.dylib  libcrypto-host.dylib  libcutils.dylib  libhidl-gen-ast.dylib  libhidl-gen-hash.dylib  libhidl-gen-host-utils.dylib  libhidl-gen-utils.dylib  libhidl-gen.dylib  libhidl-lint.dylib  libicui18n-host.dylib  libicuuc-host.dylib  libjsoncpp.dylib  liblog.dylib  libprotobuf-cpp-full.dylib  libsqlite.dylib  libssl-host.dylib  libz-host.dylib  libziparchive.dylib
path/linux-x86/: du  find  gzip
sysroots/aarch64-linux-musl/lib/: linker.script  relinterp.script
sysroots/arm-linux-musleabihf/lib/: linker.script
sysroots/i686-linux-musl/lib/: linker.script
sysroots/x86_64-linux-musl/lib/: linker.script
x86_64-linux-musl/lib/: ld-musl.so.1  linker.script
